# OpenOpcUa_1_0_4_4

./: OpenOpcUa_VS2013.sln  buildAll.sh
LuaLib/: CMakeLists.txt  LuaLib.vcxproj
OpenOpcUaClientSdk/OpenOpcUaTerminalClient/: CMakeLists.txt  OpenOpcUaTerminalClient.vcxproj
OpenOpcUaClientSdk/OpenOpcUaTerminalClient/source/: main.cpp
OpenOpcUaCoreServer/: CMakeLists.txt  OpenOpcUaCoreServer.pro  OpenOpcUaCoreServer.rc  OpenOpcUaCoreServer.vcxproj  resource.h
OpenOpcUaCoreServer/ServerShared/: VfiDataValue.h  VpiDataValue.h  VpiTypes.h
OpenOpcUaCoreServer/include/: Alias.h  ContinuationPoint.h  Definition.h  EventDefinition.h  EventDefintion.h  EventsEngine.h  Field.h  HaEngine.h  LuaDebugger.h  LuaRestoreStack.h  LuaScript.h  LuaThis.h  LuaVirtualMachine.h  MonitoredItemServer.h  NamespaceUri.h  OpenOpcUaScript.h  QueueRequest.h  QueuedCallRequest.h  QueuedHistoryReadRequest.h  QueuedPublishRequest.h  QueuedQueryFirstRequest.h  QueuedQueryNextRequest.h  QueuedReadRequest.h  SecureChannel.h  ServerApplication.h  ServiceMessages.h  ServiceModule.h  SessionServer.h  SimulatedGroup.h  SimulatedNode.h  StackCallbacks.h  SubscriptionServer.h  UABase.h  UABinding.h  UADataChangeNotification.h  UADataType.h  UAEventNotificationList.h  UAHistorianVariable.h  UAInformationModel.h  UAMethod.h  (+17 more)
OpenOpcUaCoreServer/source/: Alias.cpp  ContinuationPoint.cpp  Definition.cpp  EventDefinition.cpp  EventDefintion.cpp  EventsEngine.cpp  Field.cpp  HaEngine.cpp  LuaDebugger.cpp  LuaRestoreStack.cpp  LuaScript.cpp  LuaThis.cpp  LuaVirtualMachine.cpp  Main.cpp  MonitoredItemServer.cpp  NamespaceUri.cpp  OpenOpcUaScript.cpp  QueueRequest.cpp  QueuedCallRequest.cpp  QueuedHistoryReadRequest.cpp  QueuedPublishRequest.cpp  QueuedQueryFirstRequest.cpp  QueuedQueryNextRequest.cpp  QueuedReadRequest.cpp  SecureChannel.cpp  ServerApplication.cpp  ServiceModule.cpp  SessionServer.cpp  SimulatedGroup.cpp  SimulatedNode.cpp  StackCallbacks.cpp  SubscriptionServer.cpp  UABase.cpp  UABinding.cpp  UADataChangeNotification.cpp  UADataType.cpp  UAEventNotificationList.cpp  UAHistorianVariable.cpp  UAInformationModel.cpp  UAMethod.cpp  (+16 more)
OpenOpcUaSharedLib/: CMakeCache.txt  (+7 more)
OpenOpcUaStackV1/: CMakeCache.txt  CMakeLists.txt  Makefile  OpenOpcUaStack.pro  OpenOpcUaStackV1.rc  OpenOpcUaStackV1.vcxproj  cmake_install.cmake  resource.h
OpenOpcUaStackV1/include/shared/: opcua_asynccallstate.h  opcua_base64.h  opcua_binaryencoder.h  opcua_binaryencoderinternal.h  opcua_browsenames.h  opcua_channel.h  opcua_channel_internal.h  opcua_config.h  opcua_crypto.h  opcua_cryptofactory.h  opcua_decoder.h  opcua_endpoint.h  opcua_guid.h  opcua_https_connection.h  opcua_https_listener_connectionmanager.h  opcua_httpsstream.h  opcua_httpstream.h  opcua_list.h  opcua_messagecontext.h  opcua_p_crypto.h  opcua_p_datetime.h  opcua_p_interface.h  opcua_p_os.h  opcua_p_pki.h  opcua_p_pki_nosecurity.h  opcua_p_thread.h  opcua_p_types.h  opcua_pki.h  opcua_pkifactory.h  opcua_platformdefs.h  opcua_securestream.h  opcua_semaphore.h  opcua_serverstub.h  opcua_servicetable.h  opcua_socket.h  opcua_stackstatuscodes.h  opcua_statuscodes.h  opcua_stream.h  opcua_tcpconnection.h  opcua_tcplistener_connectionmanager.h  (+5 more)
OpenOpcUaStackV1/include/win32/openssl/: opensslconf.h
OpenOpcUaStackV1/include/wince/: errno.h
OpenOpcUaStackV1/include/wince/openssl/: opensslconf.h
OpenOpcUaStackV1/source/: opcua_asynccallstate.c  opcua_base64.c  opcua_binarydecoder.c  opcua_binaryencoder.c  opcua_buffer.c  opcua_builtintypes.c  opcua_channel.c  opcua_clientapi.c  opcua_connection.c  opcua_core.c  opcua_crypto.c  opcua_datetime.c  opcua_decoder.c  opcua_encodeableobject.c  opcua_encoder.c  opcua_endpoint.c  opcua_endpoint_ex.c  opcua_enumeratedtype.c  opcua_extensionobject.c  opcua_guid.c  opcua_https_connection.c  opcua_https_internal.c  opcua_https_listener.c  opcua_https_listener_connectionmanager.c  opcua_https_secureconnection.c  opcua_httpsstream.c  opcua_httpstream.c  opcua_list.c  opcua_listener.c  opcua_memory.c  opcua_memorystream.c  opcua_messagecontext.c  opcua_p_binary.c  opcua_p_cryptofactory.c  opcua_p_datetime.c  opcua_p_guid.c  opcua_p_interface.c  opcua_p_internal.c  opcua_p_libxml2.c  opcua_p_memory.c  (+50 more)
VpisSdk/OpenOpcUaVpiLibrary/: CMakeLists.txt  OpenOpcUaVpiLibrary.def  OpenOpcUaVpiLibrary.rc  OpenOpcUaVpiLibrary.vcxproj  OpenOpcUaVpiLibrary_VS2013.sln  OpenOpcUaVpiLibraryd.def  resource.h
VpisSdk/OpenOpcUaVpiLibrary/include/: RtSocket.h  SerialPort.h  VpiByteString.h  VpiConfig.h  VpiDataValue.h  VpiDatetime.h  VpiExpandedNodeId.h  VpiGuid.h  VpiInternal.h  VpiInternalSocket.h  VpiInternalThread.h  VpiLocalizedText.h  VpiMacroDef.h  VpiMemory.h  VpiMutex.h  VpiNodeId.h  VpiOs.h  VpiPlatformdefs.h  VpiProxyStub.h  VpiQualifiedName.h  VpiSemaphore.h  VpiSocket.h  VpiString.h  VpiThread.h  VpiTrace.h  VpiTypes.h  VpiVariant.h  VpiXmlElement.h  stdafx.h  targetver.h
VpisSdk/OpenOpcUaVpiLibrary/source/: OpenOpcUaVpiLibrary.cpp  RtSocket.cpp  SerialPort.cpp  VpiByteString.cpp  VpiDataValue.cpp  VpiDatetime.cpp  VpiExpandedNodeId.cpp  VpiGuid.cpp  VpiInternalThread.cpp  VpiLocalizedText.cpp  VpiMemory.cpp  VpiMutex.cpp  VpiNodeId.cpp  VpiQualifiedName.cpp  VpiSemaphore.cpp  VpiSocket.cpp  VpiString.cpp  VpiThread.cpp  VpiTrace.cpp  VpiVariant.cpp  VpiXmlElement.cpp  dllmain.cpp  stdafx.cpp
VpisSdk/VpiNull/: CMakeLists.txt  VPINull.vcxproj  VPINull_VS2013.sln
VpisSdk/VpiNull/include/: SourceObject.h  VPINull.h  VpiInternal.h  stdafx.h
VpisSdk/VpiNull/source/: EntryPoints.cpp  SourceObject.cpp  VPINull.cpp  VPINull.def  VPINulld.def  VpiInternal.cpp
XMLSaxParser/: CMakeCache.txt  CMakeLists.txt  Makefile  XMLSAXParser.rc  XMLSAXParser.vcxproj  XMLSaxParser.pro  cmake_install.cmake  cmake_install.cmake~  resource.h
XMLSaxParser/XmlShared/: expat.h  xmlCanon.h  xmlConfig.h  xmlLib.h  xmlop.c  xmlop.h  xmlparse.c  xmlrole.c  xmltchar.h  xmltok.c  xmltok_impl.c  xmltok_ns.c
XMLSaxParser/include/: SAXParser_Helper.h  stdafx.h
XMLSaxParser/source/: SAXParser_Helper.cpp  XMLSAXParser.cpp  XMLSAXParser.def  XMLSAXParserd.def
(+263 files in other folders)
